綜合應用測驗/02/kubernetes/wordpress/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: wordpress
  namespace: asiayo
  labels:
    app: wordpress
spec:
  selector:
    app: wordpress
  ports:
  - port: 80
  type: ClusterIP
